www/css/bin/ogx.Scroller.css
.ogx_scroller_outer{
    display:block;
    width:100%;
    box-sizing:border-box;
    padding:0;
    overflow-y:scroll !important;  
	position:relative;
}
.ogx_scroller_inner{
    display:block;
    box-sizing:border-box;
    width:100%;
    min-height:100%;
    position:relative;
}
.ogx_scroller_track{
    display:block;
    position:absolute;
    top:0;
    width:3px;
    z-index:9999999;
}
.ogx_scroller_track_button{
    position:relative;
    top:0;
	/*iOS display none -Android display block*/
    display:block;
    opacity:0;
    background-color:rgba(255, 255, 255, 0.9);
    width:3px;
    z-index:9999999;
}
/*iOS only*/
.ogx_window .ogx_scroller_track_button{
	display:block !important;
}
/*iOS only end*/
.ogx_scroller_track_anim{
    transition:opacity 500ms;   
}
.ogx_scroller_track_anim_fade_in{
    opacity:1;
}
.ogx_scroller_track_anim_fade_out{
    opacity:0;
}

